# swarm-simulation

./: .gitignore  Makefile  README.md  go.mod  go.sum  summary.json  test.py
.github/workflows/: agent.yml  build-terminal.yml  eval.yml  test.yml
cmd/swarm-simulation/: main.go
cmd/swarm-simulation-terminal/: main.go
examples/: 1-agent-2-obstacles-corner.json  1-agent-2-obstacles-parcour.json  1-agent-2-obstacles.json  1-agent-2-static-parcour.json  1-agent-2-static.json  1-agent-obstacle.json  2-agents-1-static.json  2-agents-diff-radius.json  2-agents-safezones.json  2-agents.json  3-agents-2-static.json  3-agents.json  4-agents.json  8-agents-diagonal.json  8-agents.json  sample.json  sample2.json
examples/circle/: 128-participants-circle.json  16-participants-circle.json  2-participants-circle.json  32-participants-circle.json  4-participants-circle.json  64-participants-circle.json  8-participants-circle.json
examples/random/: 128-participants-random.json  16-participants-random.json  2-participants-random.json  256-participants-random.json  (+5 more)
examples/scripts/rust-orca/: Cargo.toml  Makefile  README.md
examples/scripts/rust-orca/liborca/: Cargo.toml
examples/scripts/rust-orca/liborca/src/: geometry.rs  lib.rs  obstacle.rs
examples/scripts/rust-orca/src/: halfplane.rs  main.rs  math.rs  orca.rs  participant.rs  simulation.rs
scripts/: build-prod.sh  build-terminal.sh  build.sh  change-example.py  compare.py  evaluate.py  gen-examples.py  generate-graph-by-noise.py  generate-graph-by-participants.py  generate-graph-by-tau.py  sum-evaluations.py
(+121 files in other folders)
