[package]
name = "rust-orca"
version = "0.1.0"
edition = "2021"
authors = ["Louis Meyer"]

[dependencies]
ndarray = "0.14"
serde_json = "1.0"
liborca = { path = "./liborca" }

[features]
# by default, enable all features (i.e., our improvements)
default = ["confidence", "participant_obstacles"]
# feature for using confidence interval based on standard deviation
confidence = []
# feature for using participant obstacles
participant_obstacles = ["liborca/participant_obstacles"]
