[package]
name = "rust-orca"
version = "0.1.0"
edition = "2021"
authors = ["Louis Meyer"]

[dependencies]
orca-rs = "0.3.0"
serde_json = "1.0"

[features]
# by default, enable all features (i.e., our improvements)
default = ["confidence", "participant_obstacles"]
# feature for using confidence interval based on standard deviation
confidence = []
# feature for using participant obstacles
participant_obstacles = ["orca-rs/participant_obstacles"]
